# artsfest-test-firmware

./: .clangd  .gitignore  CMakeLists.txt  FreeRTOSConfig.h  LICENSE  README.md  audio_task.c  audio_task.h  main.c  touch_task.c  touch_task.h
